[gd_scene load_steps=8 format=3 uid="uid://cnd3tr6ouf7b3"]

[ext_resource type="Texture2D" uid="uid://0xh7olx4p5j1" path="res://assets/card/arts/King.png" id="1_4dx8l"]
[ext_resource type="Script" uid="uid://dddy5upbtshfv" path="res://scripts/Card.gd" id="1_qf083"]
[ext_resource type="Texture2D" uid="uid://d2co6ne3n53c" path="res://assets/card/CardCanvasNoBg.png" id="1_tgmmg"]
[ext_resource type="FontFile" uid="uid://dn8yegybfsirk" path="res://assets/font/04B_03__.TTF" id="2_4dx8l"]
[ext_resource type="Texture2D" uid="uid://yqasg4kctx4c" path="res://assets/card/CostSprite.png" id="4_40ytf"]

[sub_resource type="Theme" id="Theme_40ytf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qf083"]
size = Vector2(100, 140)

[node name="Card" type="Node2D"]
script = ExtResource("1_qf083")
card_id = null
atk = 1
hp = 2

[node name="FaceCard" type="Node2D" parent="."]

[node name="ArtCanvas" type="Node2D" parent="FaceCard"]

[node name="Art" type="Sprite2D" parent="FaceCard/ArtCanvas"]
texture = ExtResource("1_4dx8l")

[node name="BackgroundSprite" type="Sprite2D" parent="FaceCard/ArtCanvas"]
texture = ExtResource("1_tgmmg")

[node name="CostNode" type="Control" parent="FaceCard"]
layout_mode = 3
anchors_preset = 0
offset_left = -53.0
offset_top = -74.0
offset_right = -38.0
offset_bottom = -59.0
theme = SubResource("Theme_40ytf")

[node name="CostSprite" type="Sprite2D" parent="FaceCard/CostNode"]
position = Vector2(7, 7)
texture = ExtResource("4_40ytf")

[node name="CostLbl" type="Label" parent="FaceCard/CostNode"]
layout_mode = 0
offset_left = 3.0
offset_right = 13.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0.06666667, 0.06666667, 0.105882354, 1)
theme_override_fonts/font = ExtResource("2_4dx8l")
theme_override_font_sizes/font_size = 16
text = "0"

[node name="NameNode" type="CenterContainer" parent="FaceCard"]
offset_left = -47.0
offset_top = -67.0
offset_right = 47.0
offset_bottom = -49.0

[node name="NameLbl" type="Label" parent="FaceCard/NameNode"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8039216, 0.8392157, 0.95686275, 1)
theme_override_fonts/font = ExtResource("2_4dx8l")
theme_override_font_sizes/font_size = 8
text = "King"

[node name="HBoxContainer" type="HBoxContainer" parent="FaceCard"]
offset_left = 13.0
offset_top = 38.0
offset_right = 41.0
offset_bottom = 46.0
theme_override_constants/separation = 2
alignment = 1

[node name="AtkLbl" type="Label" parent="FaceCard/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.06666667, 0.06666667, 0.105882354, 1)
theme_override_fonts/font = ExtResource("2_4dx8l")
theme_override_font_sizes/font_size = 8
text = "1"

[node name="BarLbl" type="Label" parent="FaceCard/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.06666667, 0.06666667, 0.105882354, 1)
theme_override_fonts/font = ExtResource("2_4dx8l")
theme_override_font_sizes/font_size = 8
text = "/"

[node name="HpLbl" type="Label" parent="FaceCard/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.06666667, 0.06666667, 0.105882354, 1)
theme_override_fonts/font = ExtResource("2_4dx8l")
theme_override_font_sizes/font_size = 8
text = "2"

[node name="CardArea" type="Area2D" parent="."]

[node name="CardCollision" type="CollisionShape2D" parent="CardArea"]
shape = SubResource("RectangleShape2D_qf083")

[connection signal="mouse_entered" from="CardArea" to="." method="_on_card_area_mouse_entered"]
[connection signal="mouse_exited" from="CardArea" to="." method="_on_card_area_mouse_exited"]
